--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ djangorestframework==3.14.0
 gunicorn==20.1.0
 psycopg2-binary==2.9.5
 pytz==2022.7
+django-cors-headers==3.13.0
 sqlparse==0.4.3
 whitenoise==6.3.0
